feat: Implement database backup/restore, inventory checking, and history views for import/export and inventory checks.